--- a/pages/more/index.wxss
+++ b/pages/more/index.wxss
@@ -1,1 +1,84 @@
 /* pages/more/index.wxss */
+
+.me-info {
+    background-color: #fff;
+}
+
+.me-info-top {
+  display: flex;
+  display: -webkit-flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+.info-logo{
+  margin-top: 74rpx;
+}
+
+.info-logo image {
+  width: 200rpx;
+  height: 200rpx;
+  border-radius: 50%;
+  border: 1rpx solid #e6e6e6;
+}
+
+.info-top-cenent{
+  line-height:82rpx;
+}
+
+.info-top-right{
+  margin: 10rpx 25rpx 50rpx 25rpx;
+  Text-indent:40px;
+  color: #888;
+  font-size: 28rpx;
+}
+
+.cell {
+  font-size: 34rpx;
+}
+
+.cell-group {
+  margin-bottom: 20rpx;
+  background: #fff;
+  border-top: 1rpx solid #e5e5e5;
+  border-bottom: 1rpx solid #e5e5e5;
+}
+
+.cell-item {
+  display: flex;
+  display: -webkit-flex;
+
+  padding: 30rpx;
+  padding-left: 0;
+  border-bottom: 1rpx solid #e5e5e5;
+  align-items:center;
+  background-color: #fff;
+}
+
+.cell-item-h {
+  padding:0 30rpx;
+    align-items:center;
+}
+
+.cell-item-h image {
+  width: 50rpx;
+  height: 50rpx;
+  display:block;
+}
+
+.cell-item-b {
+  flex: 1;
+}
+
+.cell-item-h i{
+  color: #6ab7f2;
+  font-size: 40rpx;
+}
+.cell-item-f{
+  color: #c7c7cc;
+}
+
+.button{
+  background-color: #fff;
+  width: 95%;
+}
