--- a/pages/sendCarde/index.wxml
+++ b/pages/sendCarde/index.wxml
@@ -2,16 +2,30 @@
 <view class='page'>
     <view wx:if="{{true}}" class='page-one'>
           <view class='one-image'>
-              <view class='image-left'><image  mode='scaleToFill' src="/assets/image/index/sendCardIndex-left.png" ></image></view>
-              <view class='image-image'>
-                  <view  class='image-top'><image mode='scaleToFill' src="/assets/image/index/sendCardIndex-top.png" ></image></view>
-                  <view class='image-conent'>
-                      <view class='image-conents'><image mode='scaleToFill' src="/assets/image/index/sendCardIndex-conent.png" ></image></view>
-                      <view class='image-conents'><image mode='scaleToFill' src="/assets/image/index/sendCardIndex-conents.png" ></image></view>
-                  </view>
-                  <view class='image-down'><image mode='scaleToFill' src="/assets/image/index/sendCardIndex-down.png" ></image></view>
+              <view class='image-left'>
+                  <image  mode='scaleToFill' src="/assets/image/index/sendCardIndex-left.png" ></image>
               </view>
-              <view class='image-right'><image mode='scaleToFill' src="/assets/image/index/sendCardIndex-right.png" ></image></view>
+              <view class='image-image'>
+                  <view  class='image-top'>
+                      <image mode='scaleToFill' src="/assets/image/index/sendCardIndex-top.png" ></image>
+                  </view>
+                  <view class='image-conent'>
+                    <navigator url="/pages/sendCarde/outCarde/outCarde">
+                      <view class='image-conents'>
+                          <image mode='scaleToFill' src="/assets/image/index/sendCardIndex-conent.png" ></image>
+                      </view>
+                    </navigator>
+                      <view class='image-conents' bindtap='chooseimage'>
+                          <image mode='scaleToFill' src="/assets/image/index/sendCardIndex-conents.png" ></image>
+                      </view>
+                  </view>
+                  <view class='image-down'>
+                      <image mode='scaleToFill' src="/assets/image/index/sendCardIndex-down.png" ></image>
+                  </view>
+              </view>
+              <view class='image-right'>
+                  <image mode='scaleToFill' src="/assets/image/index/sendCardIndex-right.png" ></image>
+              </view>
           </view>
           <view class='arrow-right'><i class="iconfont icon-arrow-right"></i></view>
     </view>
