--- a/pages/carde/index.wxml
+++ b/pages/carde/index.wxml
@@ -1,11 +1,15 @@
 <!--pages/carde/index.wxml-->
-
-<view class="search-box">
+<view class='page_body'>
+<view class='kongge'></view>
+<view class="search-box" bindtap='onFilterInput'>
   <view class='search-icon'>
       <i class="iconfont icon-search"></i>
   </view>
-  <input type='search' auto-focus placeholder='搜索' disabled="false" bindtap='onFilterInput' value="{{filter}}"></input>
+  <input type='search' auto-focus placeholder='搜索' disabled="false"  value="{{filter}}"></input>
   <view class='search-delete' bindtap='onFilterDelete'>
       <i class="iconfont icon-guanbi_r"></i>
   </view>
 </view>
+
+</view>
+
