--- a/pages/carde/album/index.wxml
+++ b/pages/carde/album/index.wxml
@@ -1,10 +1,31 @@
 <!--pages/carde/album/index.wxml-->
 <view class='page'>
   <view class='page-head'>
-    <view class='page-head-left'>
-      <view class='page-head-left-shooting'>
+    <view class='page-head-left' >
+      <view class='page-head-lefts shooting' bindtap='onShooting' data-type='shooting'>
+        <view class='page-left-shooting i'>
+          <image mode='scaleToFill'  src='/assets/image/index/3.1拍摄.png'></image>
+        </view>
+        <view class='page-left-shooting l'>
+          拍摄名片
+        </view>
         
       </view>
+    </view>
+    <view class='page-head-left'>
+      <view class='page-head-lefts Photo'  bindtap='onShooting' data-type='photo'>
+        <view class='page-left-shooting i'>
+          <image mode='scaleToFill'  src='/assets/image/index/相册.png'></image>
+        </view>
+        <view class='page-left-shooting l'>
+          <label>相册选图</label>
+        </view>
+      </view>
+    </view>
+  </view>
+  <view class='page-body'>
+    <view class='check-carde '>
+      
     </view>
   </view>
 </view>
