--- a/pages/carde/index.wxml
+++ b/pages/carde/index.wxml
@@ -2,8 +2,8 @@
 
 <view class="page">
 
-     <view class="search" wx:if="{{isShow}}">
-        <view class='search-body'>
+     <view class="search" >
+        <view class='search-body' wx:if="{{isShow==true}}">
             <view class='search-input'>
                 <view class="search-box" bindtap='onFilterInput'>
                     <view class='search-icon'>
@@ -15,7 +15,17 @@
                     </view>
                 </view>
             </view>
-            
+        </view>
+        <view class='search-body' wx:if="{{isShow==false}}">
+          <view class='image-title' bindtap='selectAlbum'>
+            <image mode='aspectFit'  src='/assets/image/index/查看相册.png'></image>
+          </view>
+          <view class='image-title'>
+            <image mode='aspectFit'  src='/assets/image/index/群.png'></image>
+          </view>
+          <view class='image-title'>
+            <image mode='aspectFit' src='/assets/image/index/搜索.png'></image>
+          </view>
         </view>
     </view>  
     <view class='page-head'>
