--- a/pages/carde/index.wxss
+++ b/pages/carde/index.wxss
@@ -11,7 +11,15 @@
   width: 50rpx;
   height: 50rpx;
 }
-
+/* .search-body.image{
+  height: 80rpx;
+} */
+.image-title image{
+ 
+  padding: 10rpx;
+  width: 50rpx;
+  height: 50rpx;
+}
 .search-icon{
   margin-left:300rpx;
   color: #515151;
@@ -20,11 +28,7 @@
 .image-icon{
   margin-right: 20rpx;
 }
-.image-title{
-  
-  width: 50rpx;
-  height: 50rpx;
-}
+
 
 .page-head{
     background-color: #515151;
